<resources>
    <string name="app_name">Computing Society</string>

    <!--Related to Login Activity-->
    <string name="sign_in_label">Sign in with your email</string>
    <string name="sign_in_text_label">Sign in</string>
    <string name="prompt_email">Enter your email address</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_forgot_password">Forgot password</string>
    <string name="prompt_create_account">Create account</string>
    <string name="banner_description">Computing Society Banner</string>
    <string name="chevron_description">Sign in button</string>

    <!--Related to Create Account Activity-->
    <string name="create_username">Choose a username</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="existing_account">Have an account? Sign in</string>
    <string name="create_account_label">Create an account</string>
    <string name="create_acc_button">Create account</string>
    <string name="sign_in_button">Sign in</string>

    <!--Related to User Profile Activity-->
    <string name="name_hint">Name</string>
    <string name="email_hint">Email address</string>
    <string name="username_hint">Username</string>
    <string name="github_username_hint">GitHub username</string>
    <string name="view_blogs">View Blog</string>
    <string name="view_discussions">View Discussions</string>
    <string name="view_projects">View Projects</string>

    <!--Related to Edit Profile Activity-->
    <string name="prompt_facebook">Facebook url</string>
    <string name="prompt_twitter">Twitter url</string>
    <string name="prompt_instagram">Instagram url</string>
    <string name="prompt_linkedin">LinkedIn url</string>
    <string name="prompt_snapchat">SnapChat url</string>
    <string name="prompt_github">GitHub url</string>

    <!--Related to Navigation Drawer-->
    <string name="item_news_feed">News Feed</string>
    <string name="item_forums">Forums</string>
    <string name="item_blogs">Blog Posts</string>
    <string name="item_society_projects">Society Projects</string>
    <string name="item_members">Members</string>
    <string name="item_settings">Settings</string>

    <!--Related to Project List-->
    <string name="project_title">OurVLE Mobile</string>
    <string name="project_description"></string>

    <!--Related to Blogs-->

    <!--Related to News -->
    <string name="item_news_title">SIG project development starts next week</string>
    <string name="image_content_description">Computing Society banner</string>

    <!--Related to CreateForumPost-->
    <string name="activity_create_forum_post">Make A Post</string>
    <string name="action_post">Post</string>
    <string name="title_hint">Title</string>
    <string name="message_hint">Message</string>

    <!--Miscellaneous-->
    <string name="sample_date">07/01/2017 12:00pm</string>
    <string name="sample">Sample news item topic</string>
    <string name="comment">Post a comment…</string>
    <string name="search">Search</string>
    <string name="post">Make a post</string>
    <string name="save">Save</string>
    <string name="read_more">READ MORE</string>
    <string name="sample_name">Firstname Lastname</string>
    <string name="sample_email">someone@example.com</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_text_double">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
