<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/banner"
                    android:scaleType="centerCrop"
                    android:layout_height="230dp"
                    android:contentDescription="@string/banner_description" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_label"
                    android:layout_marginStart="16dp"
                    android:textColor="#fff"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="#667279"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#667279"
                    android:inputType="textAutoComplete|textEmailAddress"
                    android:hint="@string/prompt_email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="#667279"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#667279"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_marginStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#9292FF"
                    android:text="@string/prompt_forgot_password"/>
                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#9292FF"
                    android:text="@string/prompt_create_account"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="#E5E5E5"
        android:layout_height="60dp"
        android:gravity="end"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/sign_in_button"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:text="@string/sign_in_text_label"/>
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/chevron_right_black"
                android:contentDescription="@string/chevron_description" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>