<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/news_item_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/banner"
            android:contentDescription="@string/image_content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="24sp"
                android:maxLines="2"
                tools:text="SIG project development starts next week"/>
            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:maxLines="3"
                android:ellipsize="end"
                tools:text="@string/lorem_ipsum_text"/>
            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/read_more"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textColor="@color/link"
                android:maxLines="3"
                android:ellipsize="end"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/read_more"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>



