<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/news_item_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/banner"
            android:padding="10dp"
            android:contentDescription="CS banner" />

        <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_item_topic"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/item_news_title"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/news_item_body"
                android:layout_height="200dp"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:text="@string/lorem_ipsum_text"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                />

            <TextView
                android:id="@+id/read_more_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:gravity="left"
                android:textColor="@color/link"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>



