<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_forum_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateForumPostActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/activity_create_forum_post"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <EditText
            android:id="@+id/title"
            android:transitionName="title"
            tools:targetApi="lollipop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:background="@android:color/darker_gray" />
        <EditText
            android:id="@+id/message"
            android:transitionName="message"
            tools:targetApi="lollipop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            android:inputType="textMultiLine|textCapSentences"
            android:gravity="top"
            android:hint="@string/message_hint"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>