<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewsItemActivity">
    <android.support.design.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
                app:contentScrim="@color/colorPrimary"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/banner"/>
                <ImageView
                    android:id="@+id/scrim"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/gradient_scrim"/>
                <android.support.v7.widget.Toolbar
                    android:id="@+id/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="@string/sample"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:visibility="gone"
                    android:id="@+id/newstitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textSize="24sp"
                    android:maxLines="2"
                    tools:text="@string/sample"/>
                <TextView
                    android:id="@+id/news_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    tools:text="@string/lorem_ipsum_text_double"/>
                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:text="@string/sample_date"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/btn_like"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/thumb_up"
                            android:foreground="?android:selectableItemBackground"/>
                        <TextView
                            android:id="@+id/num_like"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            tools:text="0"/>
                        <ImageView
                            android:id="@+id/btn_dislike"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/thumb_down"
                            android:foreground="?android:selectableItemBackground"/>
                        <TextView
                            android:id="@+id/num_dislike"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            tools:text="0"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="56dp"
                    tools:listitem="@layout/comment_list_item" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="2dp"
            android:minHeight="48dp"
            app:cardBackgroundColor="#e3f2fd"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/reply_edittext"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:maxLines="6"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:layout_gravity="center_vertical"
                android:inputType="textMultiLine|textCapSentences"
                android:hint="@string/comment"
                android:minHeight="48dp"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/reply_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/send_white"
            android:scaleType="center"
            android:foreground="?android:selectableItemBackground"/>
    </LinearLayout>
</RelativeLayout>